Modify the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,5 @@ hello_world_framework/src/*.so.1
 #Excludes bin files of hello_pointer
 hello_pointer/*.o
 hello_pointer/*.exe
-hello_pointer/.out
+hello_pointer/*.out
 
